--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -50,6 +50,8 @@ RUN --mount=type=cache,target=/var/cache/apt \
 
 # Copy the Isaac Lab directory (files to exclude are defined in .dockerignore)
 COPY ../ ${ISAACLAB_PATH}
+RUN mkdir -p /home/jliu
+COPY bb_isaaclab_ws /home/jliu/bb_isaaclab_ws
 
 # Ensure isaaclab.sh has execute permissions
 RUN chmod +x ${ISAACLAB_PATH}/isaaclab.sh
@@ -109,3 +111,6 @@ RUN echo "export ISAACLAB_PATH=${ISAACLAB_PATH}" >> ${HOME}/.bashrc && \
 # make working directory as the Isaac Lab directory
 # this is the default directory when the container is run
 WORKDIR ${ISAACLAB_PATH}
+
+ENTRYPOINT ["/bin/bash", "-lc"]
+CMD ["sleep infinity"]
