--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -44,7 +44,9 @@ RUN --mount=type=cache,target=/var/cache/apt \
     git \
     libglib2.0-0 \
     ncurses-term \
-    wget && \
+    wget \
+    nano \
+    tmux && \
     apt -y autoremove && apt clean autoclean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -92,6 +94,8 @@ RUN touch /bin/nvidia-smi && \
 # use pip caching to avoid reinstalling large packages
 RUN --mount=type=cache,target=${DOCKER_USER_HOME}/.cache/pip \
     ${ISAACLAB_PATH}/isaaclab.sh --install
+
+RUN ${ISAACLAB_PATH}/_isaac_sim/python.sh -m pip install -e /home/jliu/bb_isaaclab_ws/source/bb_isaaclab_ws
 
 # HACK: Remove install of quadprog dependency
 RUN ${ISAACLAB_PATH}/isaaclab.sh -p -m pip uninstall -y quadprog
